# hako

./: .gitignore  404.html  CHANGELOG.md  README.md  mkdocs.yml  sitemap.xml
.github/workflows/: deploy.yml
arena/: README.md  arena.hpp  example.cpp
game_start/: AABB.cpp  AABB.h  CMakeLists.txt  DebugTerminal.cpp  DebugTerminal.h  Game.cpp  Game.h  GameObject.h  GazeMenu.cpp  GazeMenu.h  PlayerWeapon.cpp  PlayerWeapon.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  camera.h  main.cpp  mesh.h  model.cpp  model.h  shader.h  utils.h
game_start/shaders/: depth_shader.fs  depth_shader.vs  floor.fs  floor.vs  light.vs  menu_shader.fs  model_load.fs  model_load.vs  skybox.vs
gif_recorder/: README.md  gif_recorder.py
local_file_share/: share.py
mc/: CMakeLists.txt  README.md
mc/res/shaders/: chunk.fs  chunk.vs  line.fs  line.vs  ui.fs  ui.vs
mc/src/: main.cpp
mc/src/Graphics/: Camera.cpp  Camera.hpp  LineRenderer.hpp  Shader.cpp  Shader.hpp
mc/src/Math/: Frustum.cpp  Frustum.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Raycast.hpp
mc/src/Physics/: Player.cpp  Player.hpp
mc/src/World/: BlockType.hpp  Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
motion_capture/: README.md  hand_capture_replay.py
qt/: README.md  car_gauge.py  circular_button.py  dynamic_line_chart.py
recorder/: README.md  recorder.py
sandbox/: CMakeLists.txt  README.md
scripts/: bilibili.py  gitv.py
search/: search_index.json
shaders/: README.md  shader.h  shaderdemo.cpp
std/: README.md  unique.h
vtuber/: README.md  main.py
wiki/: index.html
win/: input.c
yolocpp/: CMakeLists.txt  coco.yaml  inference.cpp  inference.h  main.cpp
(+14 files in other folders)
